--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "overrides": {
+    "ajv": "8.18.0",
+    "esbuild": "0.25.0"
+  },
   "dependencies": {
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
@@ -34,6 +38,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.54.0",
-    "vite": "^4.5.3"
+    "vite": "5.4.21"
   }
 }
